--- a/contactus.html
+++ b/contactus.html
@@ -76,28 +76,85 @@
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
             </div>
+ 
             <div class="col-12 col-sm-6 offset-sm-1">
                 <h5>Map of our Location</h5>
             </div>
-            <div class="col-12 col-sm-11 offset-sm-1">
-                Button group goes here
+            <div class="col-12 col-sm-11 offset-sm-1">                
+                    <div class="btn-group" role="group">
+                        <a href="tel:+85212345678" role="button" class="btn btn-primary"><i class="fa fa-phone"> Call</i></a>
+                        <a  role="button" class="btn btn-info"><i class="fa fa-skype"> Skype</i></a>
+                        <a href="mailto:confusion@food.net" role="button" class="btn btn-success"><i class="fa fa-envelope-o"> Email</i></a>
+                    </div>
             </div>
         </div>
 
         <div class="row row-content">
-           <div class="col-12">
-              <h3>Send us your Feedback</h3>
-           </div>
+            <div class="col-12">
+               <h3>Send us your Feedback</h3>
+            </div>
             <div class="col-12 col-md-9">
-                <div class="btn-group" role="group">
-                    <a href="tel:+85212345678" role="button" class="btn btn-primary"><i class="fa fa-phone"> Call</i></a>
-                    <a  role="button" class="btn btn-info"><i class="fa fa-skype"> Skype</i></a>
-                    <a href="mailto:confusion@food.net" role="button" class="btn btn-success"><i class="fa fa-envelope-o"> Email</i></a>
-                </div>
+                <form action="">
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
+                        <div class="col-5 col-md-3">
+                            <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
+                        </div>
+                        <div class="col-7 col-md-7">
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. Number">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="emailid" class="col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input " name="approve" id="approve" value="">
+                                <label for="approve" class="form-check-label"><Strong>May we contact you?</Strong></label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select name="" id="" class="form-control">
+                                <option value="">Tel</option>
+                                <option value="">Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea type="textarea" class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-10 offset-md-2">
+                            <button class="btn btn-primary" type="submit">Send Feedback</button>
+
+                        </div>
+                    </div>
+                </form>
             </div>
-             <div class="col-12 col-md">
+            <div class="col-12 col-md">
             </div>
-       </div>
+        </div>
+
+
 
     </div>
 
