--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" alt="" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a href="#form1" role="button" class="btn btn-sm btn-block bg-warning">Reserve Table</a>
+                </div>
             </div>
         </div>
     </header>
@@ -75,8 +78,17 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">                    
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img src="./img/buffet.png" alt="buffet" class="d-flex ml-3 img-thumbnail align-self-center">
+                </div>
+                
+
             </div>
         </div>
 
@@ -91,6 +103,65 @@
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-content justify-content-center">
+            <div class="col-sm-8">
+                <div class="card">
+                    <div class="card-header bg-warning">
+                        <h4 class="text-white">Reserve a Table</h4> 
+                    </div>
+                    <div class="card-body">
+                        <form action="" id="form1">
+                            <div class="form-group row">
+                                    <label for="#" class="col-md-2 col-form-label">Number of Guests</label>
+                                    <div class="col-md-10">
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="rad1" name="rad1" value="option1">
+                                            <label for="rad1" class="form-check-label">1</label>                                           
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="rad2" name="rad2" value="option2">
+                                            <label for="rad2" class="form-check-label">2</label>                                           
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="rad3" name="rad3" value="option3">
+                                            <label for="rad3" class="form-check-label">3</label>                                           
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="rad4" name="rad4" value="option4">
+                                            <label for="rad4" class="form-check-label">4</label>                                           
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="rad5" name="rad5" value="option5">
+                                            <label for="rad5" class="form-check-label">5</label>                                           
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="rad6" name="rad6" value="option6">
+                                            <label for="rad6" class="form-check-label">6</label>                                           
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="#" class="col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-md-4">
+                                    <input type="text" class="form-control" placeholder="Date">
+                                </div>
+                                <div class="col-md-4 ">
+                                    <input type="text" class="form-control" placeholder="Time">
+                                </div>
+                                
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-2">
+                                </div>
+                                <div class="col-md">
+                                    <button class="btn text-white bg-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
